Error of some images not showing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ header .header-body {
 }
 
 .section3-image, .section3-body {
-    height: 40rem;
+    height: 30rem;
     display: flex;
     align-items: center;
 }
@@ -200,11 +200,13 @@ header .header-body {
     flex-grow: 1;
     flex-shrink: 0;
     flex-basis: 30%;
-}
-
-.section3-image .article-image {
-    width: 100%;
-    height: 100%;
+    display: flex;
+    overflow: hidden;
+    justify-content: center;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url('../images/article-img.jpeg');
 }
 
 .section3-body {
@@ -270,14 +272,9 @@ header .header-body {
 }
 
 .slide-icon {
+    padding: 0.5rem 0;
     display: flex;
     justify-content: center;
-    padding: 0.5rem 0;
-    color: white;
-}
-
-.feather-icon {
-    width: 3rem;
 }
 
 .shoe {
